2005-08-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCWildcardQuery.m:
    * Source/Search/LCWildcardTermEnum.m:
    * Headers/Search/LCWildcardQuery.h:
    * Headers/Search/LCWildcardTermEnum.h:
    Add LCWildcardQuery.

2005-08-23 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCBooleanScorer.m:
    Fix bug due to typo.

2005-08-13 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Disable coordination for prefix query.

2005-08-10 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/QueryParser:
    Initial import of LCQueryParser.

2005-07-29 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Headers/LCIndexManager.h:
    * Headers/Importer/LCImporter.h:
    * Source/LCIndexManager.h:
    * Source/Importer/LCTextImporter.h:
    Improve interface a little.


2005-07-29 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCFuzzyTermEnum.m:
    A possible fix for memory leak.

2005-07-26 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/QueryParser/LCQueryParser.m:
    A very simple implementation.
    * Source/QueryParser/LCIndexModifier.m:
    New class.
    * Source//LCIndexManager.m:
    Implement most of the methods.

2005-07-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Headers/LCIndexManager.h:
    * Headers/Importer/LCImporter.h:
    * Headers/QueryParser/LCQueryParser.h:
    * Headers/QueryParser/QueryParser.h:
    * Source/QueryParser/LCQueryParser.m:
    * Source/QueryParser/GNUmakefile:
    Add new classes.

2005-07-22 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCBooleanScorer.m:
    Chase Apache Lucene.

2005-07-15 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCFuzzyTermEnum.m:
    * Source/Search/TestFuzzyQuery.m:
    Pass all tests.
    * Change interfaces to be more like GNUstep.
    * Current test result: 
    Result: 40 classes, 101 methods, 50181 tests, 0 failed

2005-07-14 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Util/LCBitVector.m: